<resources>
    <string name="app_name">Doodle</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="title_activity_login">Login</string>
    <string name="welcome">Welcome to Doodle</string>

    <string name="select_dates">Select Dates</string>
    <string name="del_acc">Delete Account</string>
    <string name="del_acc_pop">Do you want to delete this account?</string>
    <string name="yes">Confirm</string>
    <string name="no">No</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="custom_password">Password</string>
    <string name="enter">ENTER</string>
    <string name="title_activity_location">Map</string>
    <string name="event_title_text">Title</string>
    <string name="event_optional">Optional</string>
    <string name="event_add_option">Add options</string>
    <string name="event_location">Get address</string>
    <string name="event_note">Note</string>
    <string name="event_settings">Settings</string>
    <string name="create_event">Create Event</string>
    <string name="polls_created">Polls Created</string>
    <string name="polls_participated">Polls Participated</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="email">Email</string>
    <string name="password_main">Password</string>
    <string name="login_main">Login</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="title_activity_get_address">Map</string>
    <string name="yes_no_vote">Yes/No Votes</string>
    <string name="limit_votes">Limit Votes</string>
    <string name="add_time_day">Add</string>
    <string name="finish_event">Finish</string>
    <string name="event_select_dates">Add selected dates</string>
    <string name="set_selected_dates">Set Dates</string>
    <string name="view_dates">View dates</string>
</resources>
