<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#9fbfae"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.srisri.doodle.CustomRegistration">

    <EditText
        android:id="@+id/registration_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registration_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="49dp" />

    <EditText
        android:id="@+id/registration_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registration_password"
        android:layout_alignLeft="@+id/registration_name"
        android:layout_alignStart="@+id/registration_name"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="127dp" />

    <EditText
        android:id="@+id/registration_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/custom_password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="216dp" />

    <Button
        android:id="@+id/registration_complete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/registration_password"
        android:layout_alignLeft="@+id/registration_password"
        android:layout_alignRight="@+id/registration_password"
        android:layout_alignStart="@+id/registration_password"
        android:layout_below="@+id/registration_password"
        android:layout_marginTop="29dp"
        android:text="@string/enter" />

    <TextView
        android:id="@+id/email_already_used_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registration_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:text="This email has already been used for an account"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/email_error_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email_already_used_registration"
        android:layout_centerHorizontal="true"
        android:text="A valid email must contain an @ sign"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/invalid_password_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_password"
        android:layout_centerHorizontal="true"
        android:text="Pasword Invalid. Please use a password of a minimum length of 7"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/empty_name_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registration_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="You can not have an empty name"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible" />
</RelativeLayout>
